--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,9 @@
   max-width: 1080px;
   margin: 20px auto;
 }
+
+.h1{
+  align-items: center;
+  font-family: 'Courier New', Courier, monospace;
+  /* display:flex-end ; */
+}
